# python-relion

./: .azure-pipelines.yml  .bumpversion.cfg  .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .renovaterc.json  AUTHORS.rst  Dockerfile  LICENSE  README.md  README.rst  README.txt  RELEASE.md  ex_header.py  external_cryolo.py  external_cryolo_fine.py  flipper.py  images.py  mrcfiles.py  pytest.ini  qtemplate.sh  requirements.txt  requirements_dev.txt  requirements_doc.txt  setup.cfg  setup.py  star_to_box.sh  tiffs.py  tox.ini
.azure-pipelines/: ci-unix.yml  ci-windows.yml  ci.yml  syntax-validation.py  tox.yml
.github/: dependabot.yml  renovate.json
.github/workflows/: codeql.yml
Cryolo_relion3.0/: CryoloExternalJob.py  CryoloFineTuneJob.py  CryoloPipeline.py  README  README.txt  RunJobsCryolo.py  conda.txt  correct_path_relion.py  cryolo_predict.py  cryolo_relion_it.py  external_cryolo_3.py  external_cryolo_fine_3.py  options.py  qsub.sh  qtemplate.sh  relion_it_config.py  relion_it_editted.py
Dockerfiles/: cryolo  ctffind  images  motioncorr  tomo_align
Helm/: Chart.yaml  values.yaml
Helm/charts/cluster_submission/: Chart.yaml
Helm/charts/cluster_submission/templates/: deployment.yaml
Helm/charts/cryolo/: Chart.yaml
Helm/charts/cryolo/templates/: deployment.yaml
Helm/charts/ctffind/: Chart.yaml
Helm/charts/ctffind/templates/: deployment.yaml
Helm/charts/denoise/: Chart.yaml
Helm/charts/denoise/templates/: deployment.yaml
Helm/charts/dispatcher/: Chart.yaml
Helm/charts/dispatcher/templates/: deployment.yaml
Helm/charts/extract/: Chart.yaml
Helm/charts/extract/templates/: deployment.yaml
Helm/charts/icebreaker/: Chart.yaml
Helm/charts/icebreaker/templates/: deployment.yaml
Helm/charts/images/: Chart.yaml
Helm/charts/images/templates/: deployment.yaml
Helm/charts/ispyb/: Chart.yaml
Helm/charts/ispyb/templates/: deployment.yaml
Helm/charts/motioncorr/: Chart.yaml
Helm/charts/motioncorr/templates/: deployment.yaml
Helm/charts/motioncorr_wilson/: Chart.yaml
Helm/charts/motioncorr_wilson/templates/: deployment.yaml
Helm/charts/node_creator/: Chart.yaml
Helm/charts/node_creator/templates/: deployment.yaml
Helm/charts/select_classes/: Chart.yaml
Helm/charts/select_classes/templates/: deployment.yaml
Helm/charts/select_particles/: Chart.yaml
Helm/charts/select_particles/templates/: deployment.yaml
Helm/charts/spa_node_creator/: Chart.yaml
Helm/charts/spa_node_creator/templates/: deployment.yaml
Helm/charts/tomo_align/: Chart.yaml
Helm/charts/tomo_align/templates/: deployment.yaml
Helm/charts/tomo_align_iris/: Chart.yaml
deployments/: ctffind.yaml  dispatcher-dev.yaml  images-dev.yaml  ispyb-dev.yaml  keda-so.yaml  motioncorr.yaml  rmq-dev.yaml  tomo_align.yaml
docs/: Makefile  api.rst  conf.py  dbmodel.rst  index.rst  make.bat  node.rst  onthefly.rst  pipeline.rst  usage.rst
nodes/: nodes.py
relion/: 2DClass.py  3DClass.py  3DRefine.py  CTF.py  EM_transform.py  FindData-main.py  FindData.py  MotionCorrection.py  Picking.py  Zocalo_messages.py  __init__.py  input_dict.py  main.py  mimic-script  model_output_dict.py  parse_project.py  test_EM_transform.py  test_find_data.py
relion/_parser/: class2D.py  class3D.py  ctffind.py  motioncorrection.py
src/relion/: __init__.py  parse_project.py
src/relion/_parser/: autopick.py  class2D.py  class3D.py  combine_star_files.py  combine_star_job.py  cryolo.py  ctffind.py  initialmodel.py  jobtype.py  motioncorrection.py  pipeline.py  processgraph.py  processnode.py  relativeicethickness.py  relion_pipeline.py  select.py
src/relion/cli/: current_job.py  pipeline_viewer.py  print_default_options.py  project_linker.py  refine_pipeline.py  run_pipeline.py
src/relion/cryolo_relion_it/: CorrectPath.py  CryoloExternalJob.py  CryoloFineTuneJob.py  CryoloPipeline.py  cryolo_external_job.py  cryolo_fine_tune_job.py  cryolo_pipeline.py  cryolo_relion_it.py  dls_options.py  fsc_fitting_external_job.py  icebreaker_histogram.py  mask_soft_edge_external_job.py  options.py  reconstruct_halves_external_job.py  relion_zocalo_wrapper.py  select_and_split_external_job.py  util_symlink.py
src/relion/dbmodel/: __init__.py  dbgraph.py  dbnode.py  modeltables.py
src/relion/node/: __init__.py  environment.py  graph.py
src/relion/pipeline/: __init__.py  extra_options.py  job_tracker.py  options.py  refine.py
src/relion/zocalo/: alchemy.py  bfactor_wrapper.py  class2d_wrapper.py  class3d_wrapper.py  cluster_submission.py  cryolo.py  cryolo_load.sh  ctffind.py  denoise.py  extract.py  icebreaker.py  images.py  images_service_plugin.py  ispyb_buffer.py  ispyb_recipe_tools.py  ispyb_service.py  motioncorr.py  motioncorr_wilson.py  node_creator.py  refine3d.py  refine_wrapper.py  select.py  select_classes.py  select_particles.py  service.py  spa_output_files.py  spa_relion_service_options.py  tomo_align.py  tomo_align_iris.py  wrapper.py
tests/: test_EM_transform.py  test_MC.py  test_MotionCorr.py  test_a_test.py  test_find_data.py  test_overall.py  test_project.py
tests/cryolo_relion_it/: test_cryolo_external_job.py  test_fsc_fitting_external_job.py  test_icebreaker_external_job.py  test_mask_soft_edge_external_job.py  test_reconstruct_halves_external_job.py  test_relion_it_options.py  test_select_and_split_external_job.py
tests/dbmodel/: test_dbnode.py  test_table.py
tests/node/: test_graph.py  test_node.py
tests/parser/: test_autopick.py  test_class2D.py  test_class3D.py  test_combine_star_files.py  test_ctffind.py  test_motioncorrection.py  test_pipeline.py  test_processgraph.py  test_processnode.py  test_relion_pipeline.py
tests/zocalo/: test_cryolo.py  test_cryolo_service.py  test_ctffind.py  test_ctffind_service.py  test_extract_service.py  test_icebreaker_service.py  test_images_service_plugin.py  test_motioncorr_service.py  test_node_creator.py  test_select_classes_service.py  test_select_particles_service.py  test_select_service.py  test_tomo_align.py
tests/zocalo/zocalo_spa/: test_job_centre.py
zocalo/: wrapper.py
(+4 files in other folders)
