[metadata]
name = relion
version = 0.7.2
description = Relion Python API
long_description = file: README.rst
author = Diamond Light Source - Scientific Software et al.
author_email = scientificsoftware@diamond.ac.uk
license = GPLv2
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = relion
project-urls =
    Documentation = https://python-relion.readthedocs.io/
    GitHub = https://github.com/DiamondLightSource/python-relion
    Bug-Tracker = https://github.com/DiamondLightSource/python-relion/issues


[options]
include_package_data = True
install_requires =
    gemmi
    matplotlib
    mrcfile
    numpy
    pandas
    pillow
    plotly
packages = find:
package_dir =
    =src
python_requires = >=3.6
zip_safe = False

[options.entry_points]
console_scripts =
    relipy.job = relion.cli.current_job:run
    relipy.show = relion.cli.pipeline_viewer:run
    external_job_mask_soft_edge = relion.cryolo_relion_it.mask_soft_edge_external_job:main
    external_job_select_and_split = relion.cryolo_relion_it.select_and_split_external_job:main
    external_job_reconstruct_halves = relion.cryolo_relion_it.reconstruct_halves_external_job:main
    external_job_fsc_fitting = relion.cryolo_relion_it.fsc_fitting_external_job:main
libtbx.precommit =
    relion = relion
workflows.services =
    RelionStopService = relion.zocalo.service:RelionStopService
zocalo.wrappers =
    relion = relion.zocalo.wrapper:RelionWrapper
zocalo.services.images.plugins = 
    mrc_to_jpeg = relion.zocalo.images_service_plugin:mrc_to_jpeg

[options.packages.find]
where = src
